<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.example.rainbowapps.datacontroller01.SetActivity">

    <TextView
        android:text="@string/page_Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <!--サービス開始-->
        <Button
            android:id="@+id/button_onService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_onService"
            android:textColor="#0000FF"/>
        <!--サービス停止-->
        <Button
            android:id="@+id/button_offService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_offService"
            android:textColor="#0000FF"/>
    </LinearLayout>

    <!--トップへ-->
    <Button
        android:id="@+id/button_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:text="@string/page_Top" />
</RelativeLayout>
