<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        //ページタイトル
        <TextView
            android:text="@string/title_reg_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="100dp" />
        //ユーザーアカウント入力
        <TextView
            android:text="@string/comment_accNA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText android:id="@+id/edit_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        //アカウント使用可否
        <!--<TextView-->
            <!--android:text="@string/check_init"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->
        <Space
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        //オンラインストレージアカウント入力
        <TextView
            android:text="@string/comment_accOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edit_accOS"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        //オンラインストレージアカウント入力
        <TextView
            android:text="@string/comment_SSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edit_SSID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        //オンラインストレージアカウント一致確認
        <!--<TextView-->
            <!--android:text="@string/check_init"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->


    </LinearLayout>

    <!--登録確定 -->
    <Button
        android:id="@+id/button_confirm_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:text="@string/text_confirm"
        android:textColor="#0000FF" />
</RelativeLayout>
