<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <!--戻る-->
    <Button
        android:id="@+id/button_back_imp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:text="@string/page_back2"
        android:textColor="#0000FF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        <TextView
            android:text="@string/page_ImportTop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ListView
            android:id="@+id/contents_list2"
            android:layout_width="match_parent"
            android:layout_height="620dp"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:scrollbarStyle="outsideOverlay" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom">

        <!-- 設定-->
        <LinearLayout
            android:id="@+id/button_settings"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_settings_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/page_Settings"/>
        </LinearLayout>


        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <!--今すぐインポート-->
        <LinearLayout
            android:id="@+id/button_nowDL"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_sync_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/page_nowDL"/>
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <!-- 更新リスト-->
        <LinearLayout
            android:id="@+id/button_implist"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_list_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/page_ImpList"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>