<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rainbowapps.datacontroller01.AddnewActivity"
    android:orientation="vertical">

    <!--戻る-->
    <Button
        android:id="@+id/button_back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:text="@string/page_back2"
        android:textColor="#0000FF" />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:text="@string/page_AddNew2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/contents_list"
            android:layout_width="match_parent"
            android:layout_height="620dp"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:choiceMode="multipleChoice"
            android:scrollbarStyle="outsideOverlay" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- 確定-->
        <LinearLayout
            android:id="@+id/button_confirm_addnew"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_sync_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/text_confirm"/>
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <!--トップへ-->
        <LinearLayout
            android:id="@+id/button_top"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_home_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/page_Top"/>
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <!--インポートへ-->
        <LinearLayout
            android:id="@+id/button_makeList"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_list_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/page_makeList"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
