<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
        <!-- インポート-->
        <LinearLayout
            android:id="@+id/button_import"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_file_download_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/page_ImportTop"/>
        </LinearLayout>
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
        <!-- 視聴 -->
        <LinearLayout
            android:id="@+id/button_play"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:padding="8dp"
            android:gravity="center"
            android:layout_toRightOf="@id/button_import">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_personal_video_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/page_PlayTop"/>
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
    <!-- エクスポート -->
        <LinearLayout
            android:id="@+id/button_export"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:padding="8dp"
            android:gravity="center"
            android:layout_below="@id/button_import">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_file_upload_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/page_Export"/>
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <!-- ストレージ状況 -->
        <LinearLayout
            android:id="@+id/button_storage"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:padding="8dp"
            android:gravity="center"
            android:layout_below="@id/button_import"
            android:layout_toRightOf="@id/button_import">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_assessment_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/page_StorageStatus"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
