<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
        <LinearLayout
            android:id="@+id/button_Menu"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_home_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/page_ToMenu"/>
        </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

        <!--<Button-->
            <!--android:id="@+id/button_delAcc"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:background="@null"-->
            <!--android:text="@string/text_delAcc"-->
            <!--android:textColor="#0000FF" />-->
        <LinearLayout
            android:id="@+id/button_delAcc"
            android:background="@drawable/button_information"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_supervisor_account_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/text_delAcc"/>
        </LinearLayout>
        </LinearLayout>

       <!--<TextView-->
            <!--android:id="@+id/access_token"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->
        <!--<TextView-->
            <!--android:id="@+id/access_token_secret"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->

    </LinearLayout>

</LinearLayout>
